--- a/student.html
+++ b/student.html
@@ -50,7 +50,7 @@
         </tr>
         <tr>
             <td></td>
-            <td><button>SUBMIT</button></td>
+            <td><button class="btn btn-primary">SUBMIT</button></td>
         </tr>
 
     </table>
